@@ -7,9 +7,13 @@ import javax.management.monitor.MonitorSettingException;
 public class CompareFactory {
     public static Compare newInstance(String classname) {
         try {
-            return (Compare) Class.forName(classname).newInstance();
+            Class<?> compareType = Class.forName(classname);
+            if (!Compare.class.isAssignableFrom(compareType)) {
+                throw new IllegalArgumentException("Class is not a Compare implementation: " + classname);
+            }
+            return (Compare) compareType.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
-            throw  new MonitorSettingException("class " + classname + " not found");
+            throw new IllegalArgumentException("Unable to create Compare implementation: " + classname, e);
         }
     }
 }
